# GSM_driver

./: Cargo.toml  LICENSE
drivers/dummy/: Cargo.toml
drivers/dummy/src/: dummy.rs
drivers/uc20g/: Cargo.toml
drivers/uc20g/src/: uc20g.rs
gsm_interface/: Cargo.toml
gsm_interface/src/: gsm_interface.rs
src/: app_config.rs  hw_selector.rs  main.rs  power_controller.rs
