[package]
name = "gsm_driver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.14", features = ["cargo"]}
gpio-cdev = "0.5.1"
dummy = {path = "drivers/dummy"}
gsm_interface = {path = "gsm_interface"}